--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "joi": "^17.4.0",
+    "joi-oid": "^1.1.2",
     "mongoose": "^5.12.12",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
