--- a/config/config.json
+++ b/config/config.json
@@ -1,11 +1,5 @@
 {
     "PORT": 8080,
     "HOST_IP": "0.0.0.0",
-    "mongo": {
-        "replicas"	: ["localhost:27017"],
-        "port"		: 27017,
-        "database"	: "post-list",
-        "username"	: "",
-        "password"	: ""
-    }
+    "MONGO_URL": "mongodb+srv://root:Root@cluster0.15ybp.mongodb.net/post-list?retryWrites=true&w=majority"
 }
