--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "Multer",
     "Auth"
   ],
+  "engines": {
+    "node": "12.13.0"
+  },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
